Only stop datatypes that are actually running

We have this check in ModelAssociationManager::Stop, so it makes sense
to add it to ModelAssociationManager::StopDatatype too.

Bug: 894852
Change-Id: If5f472ea74cba7bbe60f796b1255c8e54d65a069
Reviewed-on: https://chromium-review.googlesource.com/c/1290149
Commit-Queue: Florian Uunk <feuunk@chromium.org>
Reviewed-by: Marc Treib <treib@chromium.org>
Cr-Commit-Position: refs/heads/master@{#601514}
Former-commit-id: 37b83cf92779c09cf759bd280e78e6087efb5231